--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -2,7 +2,8 @@
     place-self: center;
     padding: 40px;
     border-radius: 10px;
-    background-image: linear-gradient(45deg, #2f4680, #500ae4);
+    background: linear-gradient(to bottom, #1C2444, #5643A0, #8C47AB);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
